--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <section class="main">
         <div>
-            <h2>Hello, I'm Youssef <br><span>Front End Developer</span></h2>
+            <h2>Hello, I'm Youssef <br><span>Penetration Tester</span></h2>
             <a href="#projects" class="main-btn">View my work</a>
             <div class="social-icons">
                 <a href="#"><i class="fab fa-linkedin"></i></a>
